--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
             <h3>Projects</h3>
             <hr>
         </div>
-        <div class="section" id="pojects_section">
+        <div class="section" id="projects_section">
         </div>
     </div>
 </body>
