--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="content">
-        <div class="section_title">
+        <div class="section_title" id="projects">
             <h3>Projects</h3>
             <hr>
         </div>
