--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="scripts/project_thumbnails.js"></script>
+    <script src="scripts/project_blurb_script.js"></script>
     
 </head>
 <body>
