--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
 	<title>Nickolas Santiago - Projects</title>
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
+    <link type="text/css" rel="stylesheet" href="styles/projects.css" />
     <style>
         .project_thumbnail
         {
