--- a/about_me.html
+++ b/about_me.html
@@ -4,6 +4,29 @@
     <meta charset="utf-8" />
 	<title>Nickolas Santiago - About Me</title>
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
+    <style>
+        .section
+        {
+            margin: 0 7.5%;
+        }
+        #my_picture
+        {
+            float: left;
+            margin: 0 2% 10.5pt 0;
+        }
+        ul
+        {
+            font-size: 15.25pt;
+            margin-top: 55px;
+            list-style: none;
+            padding: 0;
+        }
+        li
+        {
+            margin: 5pt 0 10.25pt 0;
+            line-height: 135%;
+        }
+    </style>
     
 </head>
 <body>
@@ -22,15 +45,15 @@
         </div>
         <div class="section">
             <img src="media/my_picture.png" id="my_picture" />
-            <p class="about_me_text">My name is Nickolas Santiago and I am front-end web developer curently located in the Bronx, New York. I am a
+            <p>My name is Nickolas Santiago and I am front-end web developer curently located in the Bronx, New York. I am a
                    soon-to-be-graduate from the Rochester Institute of Technology where I studied New Media Interactive Development.</p>
-            <p class="about_me_text">I am profficient in HTML, CSS, and JavaScript. I have experience with a number of JavaScript libraries including jQuery, React,
+            <p>I am profficient in HTML, CSS, and JavaScript. I have experience with a number of JavaScript libraries including jQuery, React,
                    d3, and Angular. On the technical side, I also have some experience working with PHP and MySQL. On the design side, I have
                    worked with PhotoShop and Illustrator.</p>
-            <p class="about_me_text">In the past, I have learned to create websites from the ground-up and create interactive web experiences from beginning
+            <p>In the past, I have learned to create websites from the ground-up and create interactive web experiences from beginning
                    concept stages to completion. I also have worked on large group projects like the Inspire project and Fragile Equilibrium. I can
                    confidently take design comps and translate them into functional code.</p>
-            <p class="about_me_text">Aside from my technical skills, I am a fast learner, very adaptive, and have a strong work ethic.</p>
+            <p>Aside from my technical skills, I am a fast learner, very adaptive, and have a strong work ethic.</p>
             <ul><b>Fun Facts:</b>
                 <li>Theater is a huge hobby of mine. I've been a part of 8 shows while at RIT as an actor, media manager, and stage manager.</li>
                 <li>I was a member of the National Hispanic Institute ever since 2010. I have since kept in contact with the organization and help
