--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="scripts/index_scripts.js"></script>
     <script src="scripts/project_blurb_script.js"></script>
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
+    <link type="text/css" rel="stylesheet" href="styles/projects.css" />
     <link type="text/css" rel="stylesheet" href="styles/email_form_style.css" />
     <style>
         .skill
