--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div id="my_div">
             <canvas id="my_div_canvas">Please use a browser that supports the canvas tag to  enjoy the full experience.</canvas>
             <div id="my_div_content">
-                <h3 id="greeting" class="top_div_content"></h3>
+                <h3 id="greeting" class="top_div_content">Greetings!</h3>
                 <p class="top_div_content">My name is Nickolas Santiago. I am a front-end web developer based in the Bronx, New York. I have experience making websites and
                        interactive web apps from scratch and translate designs into functional code.</p>
                 <p class="top_div_content">I am proficient with HTML, CSS, and JavaScript which includes exposure to multiple libraries including jQuery, React, and d3. I also have
