--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Nickolas Santiago - Portfolio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="scripts/Document2.js"></script>
-    <script src="scripts/index_scripts.js"></script>
+    <!---<script src="scripts/index_scripts.js"></script>--->
     <script src="scripts/skills_icons.js"></script>
     <!---<script src="scripts/project_blurb_script.js"></script>--->
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
