--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
                  </div>
             </div>
             <div class="skill">
+                <canvas class="skill_icon_canvas" id="icon_canvas_dynamic_dev">To enjoy the full experience, please use a browser that suports the canvas tag.</canvas>
                 <div class="skill_text">
-                    <canvas class="skill_icon_canvas" id="icon_canvas_dynamic_dev">To enjoy the full experience, please use a browser that suports the canvas tag.</canvas>
                     <h3>Dynamic Web Development</h3>
                     <p>I have experience working with APIs and using AJAX to create dynamic web pages.</p>
                  </div>
             </div>
-            <div class="skill">
+            <div class="skill"><canvas class="skill_icon_canvas" id="icon_canvas_wordpress">To enjoy the full experience, please use a browser that suports the canvas tag.</canvas>
+                    
                 <div class="skill_text">
-                    <canvas class="skill_icon_canvas" id="icon_canvas_wordpress">To enjoy the full experience, please use a browser that suports the canvas tag.</canvas>
                     <h3>WordPress Customization</h3>
                     <p>I can customize your personal WordPress site to include your content and tweak themes to fit
                            your personal style.</p>
