--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Nickolas Santiago - Portfolio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="scripts/Document2.js"></script>
-    <!---<script src="scripts/index_scripts.js"></script>--->
+    <script src="scripts/index_scripts.js"></script>
     <script src="scripts/skills_icons.js"></script>
-    <!---<script src="scripts/project_blurb_script.js"></script>--->
+    <script src="scripts/project_blurb_script.js"></script>
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
     <link type="text/css" rel="stylesheet" href="styles/projects.css" />
     <link type="text/css" rel="stylesheet" href="styles/email_form_style.css" />
@@ -118,8 +118,8 @@
                     <p>I have experience working with APIs and using AJAX to create dynamic web pages.</p>
                  </div>
             </div>
-            <div class="skill"><canvas class="skill_icon_canvas" id="icon_canvas_wordpress">To enjoy the full experience, please use a browser that suports the canvas tag.</canvas>
-                    
+            <div class="skill">
+                <canvas class="skill_icon_canvas" id="icon_canvas_wordpress">To enjoy the full experience, please use a browser that suports the canvas tag.</canvas>    
                 <div class="skill_text">
                     <h3>WordPress Customization</h3>
                     <p>I can customize your personal WordPress site to include your content and tweak themes to fit
