--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,10 @@
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
     <link type="text/css" rel="stylesheet" href="styles/projects.css" />
     <style>
+        #projects_section
+        {
+            display: inline-block;
+        }
         .project_thumbnail
         {
             background-repeat: no-repeat;
