--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="scripts/skills_icons.js"></script>
     <script src="scripts/project_blurb_script.js"></script>
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
-    <link type="text/css" rel="stylesheet" href="styles/index_page_styles.css" />
+    <link type="text/css" rel="stylesheet" href="styles/index_page_style.css" />
     <link type="text/css" rel="stylesheet" href="styles/projects.css" />
     <link type="text/css" rel="stylesheet" href="styles/email_form_style.css" />
 </head>
