--- a/projects.html
+++ b/projects.html
@@ -3,49 +3,58 @@
 <head>
     <meta charset="utf-8" />
 	<title>Nickolas Santiago - Projects</title>
+	<meta name="HandheldFriendly" content="true" />
+	<meta name="MobileOptimized" content="320" />
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
     <link type="text/css" rel="stylesheet" href="styles/style_common.css" />
     <link type="text/css" rel="stylesheet" href="styles/projects.css" />
     <style>
-        #projects_section
-        {
-            display: inline-block;
-        }
-        .project_thumbnail
-        {
-            background-repeat: no-repeat;
-            background-position: center; 
-        	background-size: cover;
-            float: left;
-        }
-        .project_thumbnail
-        {
-            width: 100%;
-            height: 100%;
-        }
-        .project_thumbnail:hover, #more_projects_button:hover, .featured_project_description_button:hover
-        {
-            cursor: pointer;
-        }
-        
-        .project_thumbnail_info
-        {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            display: none;
-            text-align: center;
-            background-color: rgba(227, 227, 227, 0.95);
-        }
-        .project_thumbnail_info p
-        {
-            margin: 0;
-            font-size: 14.35pt;
-        }
-        .project_thumbnail_info p:not(:last-child)
-        {
-            padding-top: 40%;
-            font-weight: 700;
-        }
+            #projects_section
+            {
+                display: inline-block;
+                background-color: black;
+            }
+            .project_thumbnail
+            {
+                background-repeat: no-repeat;
+                background-position: center; 
+            	background-size: cover;
+                float: left;
+            }
+            .project_thumbnail
+            {
+                width: 100%;
+                height: 100%;
+            }
+            .project_thumbnail:hover, #more_projects_button:hover, .featured_project_description_button:hover
+            {
+                cursor: pointer;
+            }
+            
+            .project_thumbnail_info
+            {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                display: none;
+                text-align: center;
+                background-color: rgba(227, 227, 227, 0.95);
+            }
+            .project_thumbnail_info p
+            {
+                margin: 0;
+                font-size: 14.35pt;
+            }
+            .project_thumbnail_info p:not(:last-child)
+            {
+                padding-top: 40%;
+                font-weight: 700;
+            }
+            #more_projects_button
+            {
+                display: inline-block;
+                margin-left: 2%;
+            }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="scripts/project_thumbnails.js"></script>
