--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                        free for contract or freelance work. Want to contact me? Email me at knicksantiago@gmail.com.</p>
                 <hr>
                 <div id="social_media_icons"></div>
+                    <a href="https://www.github.com/nickolas-santiago" target="_blank"><img class="social_media_icon" id="github_logo" /></a>
+                    <a href="https://www.linkedin.com/in/nickolas-santiago" target="_blank"><img class="social_media_icon" id="linkedin_logo" /></a>
             </div>
         </div>
         <div class="section_title">
