--- a/about_me.html
+++ b/about_me.html
@@ -36,6 +36,7 @@
             <p class="ui_button"><a href="projects.html">PROJECTS</a></p>
             <p class="ui_button" id="current_page">ABOUT ME</p>
             <p class="ui_button"><a href="contact_me.html">CONTACT ME</a></p>
+            <p class="ui_button"><a a href="NickolasSantiago-resume.pdf" target="_blank">RESUME</a></p>
         </div>
     </div>
     <div id="content">
