--- a/contact_me.html
+++ b/contact_me.html
@@ -13,12 +13,17 @@
             <p class="ui_button"><a href="projects.html">PROJECTS</a></p>
             <p class="ui_button"><a href="about_me.html">ABOUT ME</a></p>
             <p class="ui_button" id="current_page">CONTACT ME</p>
+            <p class="ui_button"><a a href="NickolasSantiago-resume.pdf" target="_blank">RESUME</a></p>
         </div>
     </div>
     <div id="content">
         <div class="section_title">
             <h3>Contact Me</h3>
             <p>You can use the form below to email me at knicksantiago@gmail.com or follow me on one of the following sites:</p>
+            <div id="social_media_icons">
+                <a href="https://www.github.com/nickolas-santiago" target="_blank"><img class="social_media_icon" id="github_logo" src="logos/github_logo_dark.png" /></a>
+                <a href="https://www.linkedin.com/in/nickolas-santiago" target="_blank"><img class="social_media_icon" id="linkedin_logo" src="logos/linkedin_logo_dark.png" /></a>
+            </div>
             <hr>
         </div>
         <div class="section">
