--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,7 @@
             <p class="ui_button" id="current_page">PROJECTS</p>
             <p class="ui_button"><a href="about_me.html">ABOUT ME</a></p>
             <p class="ui_button"><a href="contact_me.html">CONTACT ME</a></p>
+            <p class="ui_button"><a a href="NickolasSantiago-resume.pdf" target="_blank">RESUME</a></p>
         </div>
     </div>
     <div class="content">
