--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p class="ui_button"><a href="projects.html">PROJECTS</a></p>
             <p class="ui_button"><a href="about_me.html">ABOUT ME</a></p>
             <p class="ui_button"><a href="contact_me.html">CONTACT ME</a></p>
+            <p class="ui_button"><a a href="NickolasSantiago-resume.pdf" target="_blank">RESUME</a></p>
         </div>
     </div>
     <div id="content">
@@ -34,9 +35,10 @@
                 <p class="top_div_content">I am a soon-to-be-graduate from the Rochester Institute of Technology getting a degree in New Media Interactive Development. I am
                        free for contract or freelance work. Want to contact me? Email me at knicksantiago@gmail.com.</p>
                 <hr>
-                <div id="social_media_icons"></div>
+                <div id="social_media_icons">
                     <a href="https://www.github.com/nickolas-santiago" target="_blank"><img class="social_media_icon" id="github_logo" /></a>
                     <a href="https://www.linkedin.com/in/nickolas-santiago" target="_blank"><img class="social_media_icon" id="linkedin_logo" /></a>
+                </div>
             </div>
         </div>
         <div class="section_title">
